--- a/resources/lang/zh.json
+++ b/resources/lang/zh.json
@@ -6,5 +6,6 @@
   "Wrong phone number or password": "用户名或密码错误",
   "Allow only supplement the project once": "每个项目只能补充一次",
   "The project cannot be canceled": "该项目无法取消",
-  "Has already applied for the project": "已报名该项目"
+  "Has already applied for the project": "已报名该项目",
+  "Can only set authentication information once": "认证信息只能设置一次，不能再次更改"
 }
