--- a/resources/lang/zh.json
+++ b/resources/lang/zh.json
@@ -1,11 +1,12 @@
 {
   "The phone number has been registered": "该手机号已被注册",
-  "Too many requests. Please try again after one minute.": "请求过于频繁，请过一分钟再试",
+  "Too many requests. Please try again after one minute": "请求过于频繁，请过一分钟再试",
   "Wrong validation code": "验证码错误",
   "The validation code is expired": "验证码已失效",
   "Wrong phone number or password": "用户名或密码错误",
   "Allow only supplement the project once": "每个项目只能补充一次",
   "The project cannot be canceled": "该项目无法取消",
   "Has already applied for the project": "已报名该项目",
-  "Can only set authentication information once": "认证信息只能设置一次，不能再次更改"
+  "Can only set authentication information once": "认证信息只能设置一次，不能再次更改",
+  "Wrong original password": "原密码错误"
 }
