--- a/resources/lang/zh.json
+++ b/resources/lang/zh.json
@@ -1,4 +1,5 @@
 {
+  "The phone number is not registered": "该手机号未注册",
   "The phone number has been registered": "该手机号已被注册",
   "Too many requests. Please try again after one minute": "请求过于频繁，请过一分钟再试",
   "Wrong validation code": "验证码错误",
