--- a/resources/lang/zh.json
+++ b/resources/lang/zh.json
@@ -11,5 +11,8 @@
   "Can only set authentication information once": "认证信息只能设置一次，不能再次更改",
   "Wrong original password": "原密码错误",
   "The user has not bound email yet": "该用户还未绑定邮箱",
-  "The email address has been bound": "该邮箱已被绑定"
+  "The email address has been bound": "该邮箱已被绑定",
+  "Cannot repeat invitation": "不能重复邀请",
+  "Not invited": "未收到邀请",
+  "Already reviewed": "已发表过评价"
 }
