--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,9 +1,11 @@
 {
   "该手机号未注册": "The phone number is not registered",
   "该手机号已被注册": "The phone number has been registered",
-  "该邮箱未注册": "The email is not registered",
   "该邮箱已被注册": "The email has been registered",
   "该邮箱已被绑定": "The email address has been bound",
+  "该邮箱未被绑定": "The email is not been bound",
+  "该手机号未注册，请确认用户类型选择正确": "The phone number is not registered. Please confirm that the user type is selected correctly",
+  "该邮箱未被绑定，请确认用户类型选择正确且邮箱已激活": "The email is not been bound. Please confirm that the user type is selected correctly and the email is activated",
   "该用户还未设置邮箱": "The user has not set email yet",
   "您还未绑定手机号，无法更改绑定邮箱": "You have not bound your phone number and cannot change the binding mail",
   "验证码错误": "Wrong validation code",
