--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -18,5 +18,6 @@
   "原密码错误": "Wrong original password",
   "不能重复邀请": "Cannot repeat invitation",
   "未收到邀请": "Not invited",
-  "已发表过评价": "Already reviewed"
+  "已发表过评价": "Already reviewed",
+  "您无权查看": "You have no right to visit"
 }
