业主权限控制

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -19,5 +19,7 @@
   "不能重复邀请": "Cannot repeat invitation",
   "未收到邀请": "Not invited",
   "已发表过评价": "Already reviewed",
-  "您无权查看": "You have no right to visit"
+  "您无权查看": "You have no right to visit",
+  "您无权查看该甲方的信息": "You are not authorized to view the information of the Party.",
+  "您无权查看该甲方的信息，仅当您与他有进行中的项目时才可查看": "You are not authorized to view the information of the Party, but only if you have an ongoing project with him."
 }
