--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -5,7 +5,7 @@
   "该邮箱已被绑定": "The email address has been bound",
   "该邮箱未被绑定": "The email is not been bound",
   "该手机号未注册，请确认用户类型选择正确": "The phone number is not registered. Please confirm that the user type is selected correctly",
-  "该邮箱未被绑定，请确认用户类型选择正确且邮箱已激活": "The email is not been bound. Please confirm that the user type is selected correctly and the email is activated",
+  "该邮箱未绑定对应类型的用户，请确认用户类型选择正确且邮箱已激活": "The email is not been bound to user having the specific user type. Please confirm that the user type is selected correctly and the email is activated",
   "该用户还未设置邮箱": "The user has not set email yet",
   "您还未绑定手机号，无法更改绑定邮箱": "You have not bound your phone number and cannot change the binding mail",
   "验证码错误": "Wrong validation code",
@@ -13,6 +13,7 @@
   "用户名或密码错误": "Wrong phone number or password",
   "每个项目只能补充一次": "Allow only supplement the project once",
   "该项目无法取消": "The project cannot be canceled",
+  "该项目无法修改": "The project cannot be edited",
   "已报名该项目": "Has already applied for the project",
   "认证信息只能设置一次，不能再次更改": "Can only set authentication information once",
   "原密码错误": "Wrong original password",
