用户表中添加"审核状态"与"黑名单"

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,4 +1,7 @@
 {
+  "该账号已被拉黑": "The account has been blacked out",
+  "当前账号已被拉黑": "The current account has been blacked out",
+
   "该手机号未注册": "The phone number is not registered",
   "该手机号已被注册": "The phone number has been registered",
   "该邮箱已被注册": "The email has been registered",
