通过审核后不能修改身份信息

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,6 +1,7 @@
 {
   "该账号已被拉黑": "The account has been blacked out",
   "当前账号已被拉黑": "The current account has been blacked out",
+  "您已通过审核": "You have passed the review",
 
   "该手机号未注册": "The phone number is not registered",
   "该手机号已被注册": "The phone number has been registered",
