--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -31,8 +31,8 @@
   "无权评价该用户": "You are not authorized to review the user",
 
   "您无权查看": "You have no right to visit",
-  "您无权查看该甲方的信息": "You are not authorized to view the information of the Party.",
-  "您无权查看该甲方的信息，仅当您与Ta有进行中的项目时或收到Ta的评价邀请时才可查看": "You are not authorized to view the information of the Party, but only if you have an ongoing project with or been invited to review by him/her.",
+  "您无权查看该甲方的信息": "You are not authorized to view the information of the client.",
+  "您无权查看该甲方的信息，仅当您与Ta有进行中的项目时或收到Ta的评价邀请时才可查看": "You are not authorized to view the information of the client, but only if you have an ongoing project with or been invited to review by him/her.",
 
   "项目当前不允许修改交付文件": "Cannot edit the delivered file of the project"
 }
