--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -12,8 +12,8 @@
   "该邮箱未绑定对应类型的用户，请确认用户类型选择正确且邮箱已激活": "The email is not been bound to user having the specific user type. Please confirm that the user type is selected correctly and the email is activated",
   "该用户还未设置邮箱": "The user has not set email yet",
   "您还未绑定手机号，无法更改绑定邮箱": "You have not bound your phone number and cannot change the binding mail",
-  "验证码错误": "Wrong validation code",
-  "验证码已失效": "The validation code is expired",
+  "验证码错误": "Wrong verification code",
+  "验证码已失效": "The verification code is expired",
   "用户名或密码错误": "Wrong phone number or password",
   "每个项目只能补充一次": "Allow only supplement the project once",
   "该项目无法取消": "The project cannot be canceled",
